workspace = { members = ["bjw-db-derive"] }

[package]
name = "bjw-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bjw-db-derive = { path = "./bjw-db-derive", optional = true }

[features]
derive = ["bjw-db-derive"]

[dev-dependencies]
tempfile = "3"
