workspace = { members = ["bjw-db-derive"] }

[package]
name = "bjw-db"
version = "0.1.0"
authors = ["David Schatz"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bjw-db-derive = { path = "./bjw-db-derive", optional = true }

[features]
derive = ["bjw-db-derive"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "bjw"
harness = false
